5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4380/executions/1613_1800.log
== SUBMITION (2019-03-31 12:12:29) 
-- CODE:
float(input("a= "))
float(input("b= "))
float(input("c= "))
Formula=(a**2+b**2+c**2)/(a+b+c)
print(round(Formula,7))
-- EXECUTION TIME:
0.124096
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1613/1800/main.py", line 4, in <module>
    Formula=(a**2+b**2+c**2)/(a+b+c)
NameError: name 'a' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:12:42) 
-- CODE:
float(input("a= "))
float(input("b= "))
float(input("c= "))
Formula=(a**2+b**2+c**2)/(a+b+c)
print(round(Formula,7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    Formula=(a**2+b**2+c**2)/(a+b+c)
NameError: name 'a' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 12:13:30) 
-- CODE:
a=float(input("a= "))
b=float(input("b= "))
c=float(input("c= "))
Formula=(a**2+b**2+c**2)/(a+b+c)
print(round(Formula,7))
-- OUTPUT:
25.6666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 12:13:41) 
-- CODE:
a=float(input("a= "))
b=float(input("b= "))
c=float(input("c= "))
Formula=(a**2+b**2+c**2)/(a+b+c)
print(round(Formula,7))
-- EXECUTION TIME:
0.230854
-- TEST CASE 1:
---- input:
20
25
30
---- correct output:
25.6666667
---- user output:
25.6666667
-- TEST CASE 2:
---- input:
235
400
350
---- correct output:
342.8680203
---- user output:
342.8680203
-- TEST CASE 3:
---- input:
90
120
2
---- correct output:
106.1509434
---- user output:
106.1509434
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
